# ebpf-tutorials

./: .envrc  .gitignore  README.md  flake.nix
.direnv/: flake-profile-1-link  flake-profile-10-link  flake-profile-7-link  flake-profile-9-link
aya-experiments/1-helloworld/: Cargo.toml  README.md
aya-experiments/1-helloworld/helloworld/: Cargo.toml  build.rs
aya-experiments/1-helloworld/helloworld-common/: Cargo.toml
aya-experiments/1-helloworld/helloworld-ebpf/: Cargo.toml
aya-experiments/1-helloworld/helloworld-ebpf/src/: main.rs
aya-experiments/execsnoop/: Cargo.toml  README.md
aya-experiments/execsnoop/execsnoop/: Cargo.toml  build.rs
aya-experiments/execsnoop/execsnoop-common/: Cargo.toml
aya-experiments/execsnoop/execsnoop-ebpf/: Cargo.toml
aya-experiments/execsnoop/execsnoop-ebpf/src/: main.rs  vmlinux.rs
aya-experiments/exitsnoop/: Cargo.toml  README.md
aya-experiments/exitsnoop/exitsnoop/: Cargo.toml  build.rs
aya-experiments/exitsnoop/exitsnoop-common/: Cargo.toml
aya-experiments/exitsnoop/exitsnoop-ebpf/: Cargo.toml
aya-experiments/exitsnoop/exitsnoop-ebpf/src/: main.rs  vmlinux.rs
aya-experiments/fentry-unlink/: Cargo.toml  README.md
aya-experiments/fentry-unlink/fentry-unlink/: Cargo.toml  build.rs
aya-experiments/fentry-unlink/fentry-unlink-common/: Cargo.toml
aya-experiments/fentry-unlink/fentry-unlink-ebpf/: Cargo.toml
aya-experiments/fentry-unlink/fentry-unlink-ebpf/src/: main.rs
aya-experiments/kprobe-unlink/: Cargo.toml  README.md
aya-experiments/kprobe-unlink/kprobe-unlink/: Cargo.toml  build.rs
aya-experiments/kprobe-unlink/kprobe-unlink-common/: Cargo.toml
aya-experiments/kprobe-unlink/kprobe-unlink-ebpf/: Cargo.toml
aya-experiments/kprobe-unlink/kprobe-unlink-ebpf/src/: main.rs  vmlinux.rs
aya-experiments/opensnoop/: Cargo.toml  README.md
aya-experiments/opensnoop/opensnoop/: Cargo.toml  build.rs
aya-experiments/opensnoop/opensnoop-common/: Cargo.toml
aya-experiments/opensnoop/opensnoop-ebpf/: Cargo.toml
aya-experiments/sigsnoop/: Cargo.toml  README.md
aya-experiments/sigsnoop/sigsnoop-ebpf/: Cargo.toml
aya-experiments/sigsnoop/sigsnoop-ebpf/src/: main.rs  vmlinux.rs
aya-experiments/uprobe-bashreadline/: Cargo.toml  README.md  bash.sh
aya-experiments/uprobe-bashreadline/uprobe-bashreadline-ebpf/: Cargo.toml
aya-experiments/uprobe-bashreadline/uprobe-bashreadline-ebpf/src/: main.rs
eunomia/1-helloworld/: hello.c
eunomia/2-kprobes/: kprobe.c
eunomia/3-fentry/: fentry.c
eunomia/4-open-files-filter/: open_filter.c
eunomia/5-uprobe/: bash.sh  uprobe.c  uprobe_with_maps.c
eunomia/6-sigsnoop/: sigsnoop.c
eunomia/7-perfarray/: execsnoop.bpf.c  execsnoop.h
eunomia/8-ringbuffer/: exitsnoop.bpf.c
eunomia/9-runqlat/: runqlat.bpf.c  runqlat.h
(+16 files in other folders)
